framec_tests/language_specific/python/v3_validator/positive/actions_without_frame.frm
@target python

system S {
    machine:
        $A {
            e() {
                # no Frame statements here either
            }
        }
    actions:
        do_it() {
            # native only
            pass
        }
}
