framec_tests/language_specific/python/v3_validator/negative/action_has_frame.frm
@target python

system S {
    actions:
        fn bad() {
            -> $B()
        }
}
